--- a/src/index.scss
+++ b/src/index.scss
@@ -12,3 +12,118 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+@layer base {
+  :root {
+    --color-grey-0: 255 255 255;
+    --color-grey-1: 253 253 253;
+    --color-grey-2: 247 247 247;
+    --color-grey-3: 239 242 243;
+    --color-grey-4: 204 204 204;
+    --color-grey-5: 153 153 153;
+    --color-grey-6: 102 102 102;
+    --color-grey-7: 51 51 51;
+    --color-grey-8: 34 34 34;
+    --color-grey-9: 0 0 0;
+    --color-yellow: 218 183 0;
+    --color-green: 10 116 38;
+    --color-aqua: 62 153 159;
+    --color-blue: 56 161 219;
+    --color-purple: 157 91 139;
+    --color-grey: 134 145 148;
+    --color-pink-light: rgba(255, 230, 250, 0.72);
+    --color-cyan-light: rgba(227, 253, 245, 0.72);
+    --color-red: #e9546b;
+    --color-pink: #ed6ea0;
+    --color-orange: #ec8c69;
+    --color-pink-light-a3: rgba(255, 230, 250, 0.3);
+    --color-pink-light-a5: rgba(255, 230, 250, 0.5);
+    --color-pink-light-a7: rgba(255, 230, 250, 0.7);
+
+    // .primary {
+    //   --note-border: #cda0c7;
+    //   --note-bg: #fdf8ff;
+    //   --note-text: #8a51c0;
+    //   --note-hover: #935aca;
+    // }
+    // .info {
+    //   --note-border: #8fa4dc;
+    //   --note-bg: #f1f9ff;
+    //   --note-text: #1d4974;
+    //   --note-hover: #1d5fa0;
+    // }
+    // .success {
+    //   --note-border: #a3c293;
+    //   --note-bg: #fcfff5;
+    //   --note-text: #2c662d;
+    //   --note-hover: #3b883c;
+    // }
+    // .warning {
+    //   --note-border: #c9ba9b;
+    //   --note-bg: #fffbeb;
+    //   --note-text: #947600;
+    //   --note-hover: #ccb045;
+    // }
+    // .danger {
+    //   --note-border: #f4b3c1;
+    //   --note-bg: #fff2f5;
+    //   --note-text: #cc0f35;
+    //   --note-hover: #f14668;
+    // }
+  }
+
+  :root[class~='dark'] {
+    --color-grey-0: 34 34 34;
+    --color-grey-1: 34 37 43;
+    --color-grey-2: 545454;
+    --color-grey-3: 686868;
+    --color-grey-4: 102 102 102;
+    --color-grey-5: 170 170 170;
+    --color-grey-6: 204 204 204;
+    --color-grey-7: 221 221 221;
+    --color-grey-8: 238 238 238;
+    --color-grey-9: 247 247 247;
+    --color-yellow: 255 225 117;
+    --color-green: 134 197 157;
+    --color-aqua: 151 211 214;
+    --color-blue: 156 208 237;
+    --color-purple: 207 172 197;
+    --color-grey: 195 200 202;
+    --color-pink-light: #322d31;
+    --color-cyan-light: #2d3230;
+    --color-red: rgba(237, 118, 137, 0.9);
+    --color-pink: rgba(241, 139, 179, 0.8);
+    --color-orange: rgba(240, 163, 135, 0.8);
+
+    // .primary {
+    //   --note-border: rgba(123, 96, 119, 0.8);
+    //   --note-bg: rgba(50, 49, 50, 0.8);
+    //   --note-text: rgba(161, 116, 205, 0.8);
+    //   --note-hover: rgba(117, 72, 161, 0.8);
+    // }
+    // .info {
+    //   --note-border: rgba(85, 98, 132, 0.8);
+    //   --note-bg: rgba(48, 49, 50, 0.8);
+    //   --note-text: rgba(109, 164, 219, 0.8);
+    //   --note-hover: rgba(39, 127, 214, 0.8);
+    // }
+    // .success {
+    //   --note-border: rgba(97, 116, 88, 0.8);
+    //   --note-bg: rgba(50, 50, 48, 0.8);
+    //   --note-text: rgba(128, 200, 129, 0.8);
+    //   --note-hover: rgba(41, 95, 42, 0.8);
+    // }
+    // .warning {
+    //   --note-border: rgba(120, 111, 93, 0.8);
+    //   --note-bg: rgba(50, 50, 46, 0.8);
+    //   --note-text: rgba(220, 176, 0, 0.8);
+    //   --note-hover: rgba(163, 140, 55, 0.8);
+    // }
+    // .danger {
+    //   --note-border: rgba(146, 107, 115, 0.8);
+    //   --note-bg: rgba(50, 48, 48, 0.8);
+    //   --note-text: rgba(239, 38, 79, 0.8);
+    //   --note-hover: rgba(168, 49, 72, 0.8);
+    // }
+  }
+}
