--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import './iconfont.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -28,6 +30,7 @@
     --color-pink-light-a3: rgba(255, 230, 250, 0.3);
     --color-pink-light-a5: rgba(255, 230, 250, 0.5);
     --color-pink-light-a7: rgba(255, 230, 250, 0.7);
+    --body-bg-shadow: rgb(var(--color-grey-2));
 
     // .primary {
     //   --note-border: #cda0c7;
@@ -83,6 +86,7 @@
     --color-red: rgba(237, 118, 137, 0.9);
     --color-pink: rgba(241, 139, 179, 0.8);
     --color-orange: rgba(240, 163, 135, 0.8);
+    --body-bg-shadow: #000;
 
     // .primary {
     //   --note-border: rgba(123, 96, 119, 0.8);
@@ -123,16 +127,78 @@
   padding: 0;
 }
 
-html,
-body {
+::-webkit-scrollbar {
+  width: 0.3125rem;
+  height: 0.3125rem;
+  background: transparent;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 0.3125rem;
+  background: transparent;
+}
+
+::-webkit-scrollbar-track-piece {
+  background: transparent;
+}
+
+::-webkit-scrollbar-button {
+  background: transparent;
+  height: 0;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 1.25rem;
+  background-clip: padding-box;
+  background-color: rgb(var(--color-grey-3));
+  background-image: linear-gradient(
+    45deg,
+    rgb(var(--color-grey-1) / 0.5) 25%,
+    transparent 0,
+    transparent 50%,
+    rgb(var(--color-grey-1) / 0.5) 0,
+    rgb(var(--color-grey-1) / 0.5) 75%,
+    transparent 0,
+    transparent
+  );
+}
+
+::selection {
+  background: var(--color-orange);
+  color: rgb(var(--color-grey-2));
+}
+
+@font-face {
+  font-family: 'ic';
+  font-display: swap;
+  src: url('./assets/iconfont.woff2') format('woff2');
+}
+
+.ic {
+  font-family: 'ic' !important;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  width: 1.25em;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+}
+
+html {
   height: 100%;
 }
 
 body {
+  height: 100%;
   font-family: -apple-system, 'PingFang SC', 'Microsoft YaHei', sans-serif;
   font-size: 16px;
   color: rgb(var(--color-grey-7));
   line-height: 2;
+  background: linear-gradient(to top, var(--body-bg-shadow) 0, rgb(var(--color-grey-1)) 20%)
+    no-repeat bottom;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -140,8 +206,24 @@ body {
   -webkit-tap-highlight-color: transparent;
   -moz-osx-font-smoothing: grayscale;
 
+  &::-webkit-scrollbar {
+    width: 0.5rem;
+    height: 0.5rem;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--color-pink-light);
+  }
+
   input,
   textarea {
     color: rgb(var(--color-grey-7));
+  }
+
+  #root {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    min-height: 100%;
+    min-width: 100%;
   }
 }
