--- a/src/index.scss
+++ b/src/index.scss
@@ -22,7 +22,7 @@
     --color-blue: 56 161 219;
     --color-purple: 157 91 139;
     --color-grey: 134 145 148;
-    --color-pink-light: rgba(255, 230, 250, 0.72);
+    --color-pink-light: #ffe6fa;
     --color-cyan-light: rgba(227, 253, 245, 0.72);
     --color-red: #e9546b;
     --color-pink: #ed6ea0;
