--- a/src/index.scss
+++ b/src/index.scss
@@ -26,6 +26,7 @@
     --color-cyan-light: rgba(227, 253, 245, 0.72);
     --color-red: #e9546b;
     --color-pink: #ed6ea0;
+    --color-pink-a3: rgba(237, 110, 160, 0.3);
     --color-orange: #ec8c69;
     --color-pink-light-a3: rgba(255, 230, 250, 0.3);
     --color-pink-light-a5: rgba(255, 230, 250, 0.5);
