--- a/src/index.scss
+++ b/src/index.scss
@@ -26,6 +26,7 @@
     --color-pink-light: #ffe6fa;
     --color-cyan-light: #e3fdf5;
     --color-red: #e9546b;
+    --color-red-a3: rgba(233, 84, 107, 0.3);
     --color-pink: #ed6ea0;
     --color-pink-a3: rgba(237, 110, 160, 0.3);
     --color-orange: #ec8c69;
